<resources>
    <string name="app_name">Vedant Water Supply</string>

    <string name="copyright_2023_vedant_water_supply_nall_rights_reserved">Copyright %s © Vedant Water Supply. \nAll Rights Reserved</string>
    <string name="let_s_sign_you_in">Let\'s Sign You in</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="please_enter_email_address">Please Enter Email Address</string>
    <string name="please_enter_valid_email_address">Please Valid Enter Email Address</string>
    <string name="please_enter_password">Please Enter Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="hello">Hello,</string>
    <string name="welcome">Welcome!</string>
    <string name="total_trips">Total Trips</string>
    <string name="total_maintenance">Total Maintenance</string>
    <string name="total_maintenance_amount">Total Maintenance Amount</string>
    <string name="trips">Trips</string>
    <string name="maintenance">Maintenance</string>
    <string name="drivers">Drivers</string>
    <string name="view_all">View All</string>
    <string name="cancelled">Cancelled</string>
    <string name="tanker">Tanker</string>
    <string name="driver">Driver</string>
    <string name="scheduled_date">Scheduled Date</string>
    <string name="amount">Amount</string>
    <string name="payment_date">Payment Date</string>
    <string name="vws">VWS</string>
    <string name="current_month">Current Month</string>
    <string name="date">Date</string>
    <string name="here_you_can_check_current_month_trips_records">Here you can check current month\'s trips records</string>
    <string name="add_trip">Add Trip</string>
    <string name="here_you_can_check_current_month_maintenance_expense_records">Here you can check current month\'s maintenance expense records</string>
    <string name="add_maintenance">Add Maintenance</string>
    <string name="here_you_can_check_current_month_drivers_expense_records">Here you can check current month\'s drivers expense records</string>
    <string name="add_driver_expense">Add Driver Expense</string>
    <string name="total_drivers_expense">Total Driver Expense</string>
    <string name="truck_no">Truck No.</string>
    <string name="own_tankers">Own Tankers</string>
    <string name="other_tanker">Other Tanker</string>
    <string name="diesel_amount">Diesel Amount</string>
    <string name="add_trip_details">Add Trip Details</string>
    <string name="here_you_can_add_trip_details">Here you can add your trip details.</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="permanent_drivers">Permanent Drivers</string>
    <string name="other_driver">Other Driver</string>
    <string name="filling_site_name">Filling Site</string>
    <string name="destination_site_name">Destination(Site) Name</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_mo_no">Customer Mobile No.</string>
    <string name="tanker_type">Tanker Type</string>
    <string name="adding_by">Adding By</string>
    <string name="discard">Discard</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="here_you_can_add_maintenance_details">Here you can add your maintenance details.</string>
    <string name="maintenance_amount">Maintenance Amount</string>
    <string name="maintenance_date">Maintenance Date</string>
    <string name="driver_type">Driver Type</string>
    <string name="here_you_can_add_driver_expense_details">Here you can add your driver expense details.</string>
    <string name="permanent_driver">Permanent Driver</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="extra_payment">Extra Payment</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="todo">TODO</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="added_by">Added By</string>
    <string name="status">Status</string>
    <string name="trip_detail">Trip Detail</string>
    <string name="tanker_detail">Tanker Detail</string>
    <string name="here_you_can_check_trip_detail">Here you can check trip detail.</string>
    <string name="water_type">Water Type</string>
    <string name="tanker_no">Tanker No.</string>
    <string name="fuel_detail">Fuel Detail</string>
    <string name="fuel_amount">Fuel Amount</string>
    <string name="driver_detail">Driver Detail</string>
    <string name="driver_name">Driver Name</string>
    <string name="tanker_driver_detail"><![CDATA[Tanker & Driver Detail]]></string>
    <string name="site_detail">Site Detail</string>
    <string name="customer_detail">Customer Detail</string>
    <string name="maintenance_detail">Maintenance Detail</string>
    <string name="here_you_can_check_tanker_maintenance_detail">Here you can check tanker maintenance detail.</string>
    <string name="driver_expense_detail">Driver Expense Detail</string>
    <string name="here_you_can_check_driver_expense_detail">Here you can check driver expense detail.</string>
    <string name="driver_payment_detail">Driver Payment Detail</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="extra_paid_amount">Extra Paid Amount</string>
    <string name="cancel">Cancel</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="delete_maintenance">Delete Maintenance</string>
    <string name="edit_maintenance">Edit Maintenance</string>
    <string name="delete_driver_expense">Delete Driver Expense</string>
    <string name="edit_driver_expense">Edit Driver Expense</string>
    <string name="tanker_filling_site">Tanker Filling Site</string>
    <string name="please_select_year">Please Select Year</string>
    <string name="please_select_tanker_type">Please Select Tanker Type</string>
    <string name="own_tanker">Own Tanker</string>
    <string name="please_select_tanker_no">Please select tanker no</string>
    <string name="please_select_payment_mode">Please select payment mode</string>
    <string name="please_select_driver_type">Please Select Driver Type</string>
    <string name="permanante">Permanante</string>
    <string name="other_drivers">Other Drivers</string>
    <string name="please_select_driver">Please select driver</string>
    <string name="please_select_filling_site">Please select filling site</string>
    <string name="cidco_water">Cidco Water</string>
    <string name="midc_water">MIDC Water</string>
    <string name="borewell_water">Borewell Water</string>
    <string name="please_select_water_type">Please Select Water Type</string>
    <string name="please_select_added_by">Please Select Added By</string>
    <string name="please_select_status">Please Select Status</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="bala">Bala</string>
    <string name="somar">Somar</string>
    <string name="mukund">Mukund</string>
    <string name="sagar">Sagar</string>
    <string name="wasim">Wasim</string>
    <string name="mh_04_ds_6501">MH 04 DS 6501</string>
    <string name="mh_04_el_0809">MH 04 EL 0809</string>
    <string name="mh_48_t_7857">MH 48 T 7857</string>
    <string name="mh_48_j_0158">MH 48 J 0158</string>
    <string name="calendar">Calendar</string>
    <string name="fuel_filled_by">Fuel Filled By</string>
    <string name="please_select_fuel_filled_by">Please select fuel filled by</string>
    <string name="by_ajit">By Ajit</string>
    <string name="by_nitish">By Nitish</string>
    <string name="by_bussiness_card">By Bussiness Card</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="confirmation_logout">Are you sure you want to logout?</string>
    <string name="driver_mo_no">Driver Mo No.</string>
    <string name="total_fuel_amount">Total Fuel Amount</string>
    <string name="indian_rupee">&#8377;</string>
    <string name="please_enter_tanker_no">Please enter tanker no</string>
    <string name="please_select_date">Please select date</string>
    <string name="please_enter_fuel_amount">Please enter fuel amount</string>
    <string name="please_enter_driver_name">Please enter driver name</string>
    <string name="please_enter_destination_site">Please enter destination site</string>
    <string name="please_enter_customer_name">Please enter customer name</string>
    <string name="all">All</string>
    <string name="please_wait">Please Wait</string>
    <string name="na">N/A</string>
    <string name="update_trip_details">Update Trip Details</string>
    <string name="here_you_can_update_trip_details">Here you can update your trip details.</string>
    <string name="update">Update</string>
    <string name="no_trips_data_found">No Trips Data Found</string>
    <string name="no_maintenance_data_found">No Maintenance Data Found</string>
    <string name="no_driver_data_found">No Driver Data Found</string>
    <string name="update_maintenance">Update Maintenance</string>
    <string name="here_you_can_update_maintenance_details">Here you can update your maintenance details.</string>
    <string name="please_enter_payment_amount">Please enter payment amount</string>
    <string name="please_enter_extra_payment_given">Please enter extra payment given</string>
    <string name="update_driver_expense">Update Driver Expense</string>
    <string name="here_you_can_update_driver_expense_details">Here you can update your driver expense details.</string>
    <string name="welcome_to_vedant_water_supply">Welcome to Vedant Water Supply!</string>
    <string name="total_driver_payment">Total Driver Payment</string>
    <string name="total_extra_payment">Total Extra Payment</string>
    <string name="maintenance_done_by">Maintenance Done By</string>
    <string name="driver_payment_done_by">Driver Payment Done By</string>
    <string name="please_select_maintenance_done_by">Please select maintenance done by</string>
    <string name="please_select_driver_payment_done_by">Please select driver payment done by</string>
    <string name="please_enter_total_trip">Please enter total trip</string>
</resources>