<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTotalExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:background="@drawable/bg_blue_round_corner_5"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clScreenTitle">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/labelTotal"
            style="@style/RobotoRegular14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_trips"
            android:textColor="@color/color_FFFFFFD9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTotal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotal"
            style="@style/RobotoMedium14"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_5sdp"
            android:gravity="end"
            tools:text="2,42,460,631.45"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/labelTotal"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/labelCurrentMonth"
            style="@style/RobotoRegular14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/current_month"
            android:textColor="@color/color_FFFFFFD9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTotal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrentMonth"
            style="@style/RobotoMedium14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:gravity="end"
            tools:text="April"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/labelCurrentMonth"
            app:layout_constraintTop_toTopOf="@id/labelCurrentMonth" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/labelDate"
            style="@style/RobotoRegular14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/date"
            android:textColor="@color/color_FFFFFFD9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentMonth" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDate"
            style="@style/RobotoMedium14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:gravity="end"
            tools:text="10/11/2023"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/labelDate"
            app:layout_constraintTop_toTopOf="@id/labelDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>